--- a/Mindoro_Timekeeping/cfmc/templates/admin/cfmc/employee_change_form.html
+++ b/Mindoro_Timekeeping/cfmc/templates/admin/cfmc/employee_change_form.html
@@ -38,7 +38,7 @@
 {% endblock %}
 <form {% if has_file_field %}enctype="multipart/form-data" {% endif %}action="{{ form_url }}" method="post" id="{{ opts.model_name }}_form" novalidate>{% csrf_token %}{% block form_top %}{% endblock %}
 <div>
-<div style="position: absolute; top: 141px; overflow: hidden; border: solid 1px silver; border-radius: 5px; height: 100px;">{{original.thumbnail}}</div>
+{% comment %} <div style="box-shadow: 5px 5px 5px grey; position: absolute; top: 124px; overflow: hidden; border: solid 1px silver; border-radius: 5px; height: 100px;">{{original.thumbnail}}</div> {% endcomment %}
 {% if is_popup %}<input type="hidden" name="{{ is_popup_var }}" value="1">{% endif %}
 {% if to_field %}<input type="hidden" name="{{ to_field_var }}" value="{{ to_field }}">{% endif %}
 {% if save_on_top %}{% block submit_buttons_top %}{% submit_row %}{% endblock %}{% endif %}
