--- a/Mindoro_Timekeeping/cfmc/templates/cfmc/record.html
+++ b/Mindoro_Timekeeping/cfmc/templates/cfmc/record.html
@@ -1,23 +1,26 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_urls static admin_modify %}
 
-{% comment %} {% block extrahead %}{{ block.super }}
+{% block extrahead %}{{ block.super }}
 <script type="text/javascript" src="{% url 'admin:jsi18n' %}"></script>
 {{ media }}
-{% endblock %} {% endcomment %}
+{% endblock %}
 
-{% comment %} {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %} {% endcomment %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/forms.css" %}">{% endblock %}
 
-{% comment %} {% block coltype %}colM{% endblock %} {% endcomment %}
+{% block coltype %}colM{% endblock %}
 
-{% comment %} {% block bodyclass %}{{ block.super }} app-{{ opts.app_label }} model-{{ opts.model_name }} change-form{% endblock %} {% endcomment %}
+{% block bodyclass %}{{ block.super }} app-{{ opts.app_label }} model-{{ opts.model_name }} change-form{% endblock %}
 
 {% if not is_popup %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
     <a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+    &rsaquo; <a href="{{STATIC_URL}}/admin/cfmc/" >Cfmc</a>
+    &rsaquo; <a href="{{STATIC_URL}}/admin/cfmc/employee" >Employees</a>
     &rsaquo; <a href="javascript:history.back()" >{{emp.lastname}}, {{emp.firstname}} {{emp.middlename|first}}.</a>
-    <a href="javascript:history.back()" style="float: right">Back</a>
+    &rsaquo; Record
+    {% comment %} <a href="javascript:history.back()" style="float: right">Back</a> {% endcomment %}
 
 </div>
 {% endblock %}
@@ -30,12 +33,12 @@
             color: #0275d8;
             transform: scale(1.5);
         }
-        .pic:hover{
+        {% comment %} .pic:hover{
             transform: scale(1.5);
-        }
+        } {% endcomment %}
     </style>
     <div style="display: flex; align-items:center; justify-content:center;">
-    <div style="width: 50%; border: solid 1px silver; border-radius: 5px; display: flex; align-items:center; justify-content:center; padding:3px;">
+    <div style="width: 65%; border: solid 1px silver; border-radius: 5px; display: flex; align-items:center; justify-content:center; padding:3px;">
         <div class="pic" style=" overflow:hidden; border-radius: 5px; height:100px;">{{emp.thumbnail}}</div>
         &nbsp;&nbsp;&nbsp;&nbsp;
         <div style="font-size: 24px; font-weight: bold;">
@@ -47,7 +50,7 @@
     </div>
     <br>
     <div style="display: flex; justify-content: center;">
-        <table style="width: 50%;" >
+        <table style="width: 65%;" >
             <thead>
                 <tr>
                     <th style="text-align: center; font-size: 20px;">
@@ -77,6 +80,11 @@
                 </tr>
             </thead>
             <tbody class="olo">
+                {% if record|length == 0 %}
+                    <tr>
+                        <th colspan=4 style="text-align:center; font-size: 32px; padding:20px;">NO DATA TO DISPLAY</th>
+                    </tr>
+                {% endif %}
                 {% for rec in record %}
                 <tr>
                     <th style="text-align: center; ">{{forloop.counter}}</th>
@@ -89,5 +97,9 @@
         </table>
     </div>
     
-
+<script>
+    window.onload = function() {
+        document.getElementsByTagName("TITLE")[0].innerHTML = "{{emp.lastname}}, {{emp.firstname}} {{emp.middlename|first}}. | TIMEKEEPING";
+    }
+</script>
 {% endblock %}
