--- a/Mindoro_Timekeeping/cfmc/static/cfmc/style.css
+++ b/Mindoro_Timekeeping/cfmc/static/cfmc/style.css
@@ -15,6 +15,16 @@
 }
 
 
+#titlebox{
+    font-family: "Piboto";
+    font-weight: bold;
+    text-align: center;
+    font-size:	30px;
+    cursor: default;
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+}
+
 #dateBox{
     font-family: "Piboto";
     font-weight: bold;
@@ -35,4 +45,19 @@
     border: solid 3px;
     color: blue;
     border-radius: 5px;
+}
+
+
+#inputBox{
+		display: block;
+		margin: auto;
+		border: 0;
+		outline: none;
+		text-align: center;
+		background-color: inherit;
+		color: transparent;
+}
+
+#inputBtn{
+		display: none;
 }
