olo for mindoro na

--- a/Mindoro_Timekeeping/schedule/templates/schedule/week.html
+++ b/Mindoro_Timekeeping/schedule/templates/schedule/week.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load static %}
 {% load i18n admin_urls static admin_modify %}
-
+{% load if_late %}
 {% block extrahead %}{{ block.super }}
 <script type="text/javascript" src="{% url 'admin:jsi18n' %}"></script>
 
@@ -231,20 +231,20 @@
                 <tr>
                     <td >{{ forloop.counter }}</td>
                     <td style="text-align: left;">{{q.name}}</td>
-                    <td >{{q.ti1|default_if_none:""}}</td>
-                    <td >{{q.to1|default_if_none:""}}</td>
-                    <td >{{q.ti2|default_if_none:""}}</td>
-                    <td >{{q.to2|default_if_none:""}}</td>
-                    <td >{{q.ti3|default_if_none:""}}</td>
-                    <td >{{q.to3|default_if_none:""}}</td>
-                    <td >{{q.ti4|default_if_none:""}}</td>
-                    <td >{{q.to4|default_if_none:""}}</td>
-                    <td >{{q.ti5|default_if_none:""}}</td>
-                    <td >{{q.to5|default_if_none:""}}</td>
-                    <td >{{q.ti6|default_if_none:""}}</td>
-                    <td >{{q.to6|default_if_none:""}}</td>
-                    <td >{{q.ti7|default_if_none:""}}</td>
-                    <td >{{q.to7|default_if_none:""}}</td>
+                    <td >{{q.ti1|date:'g:i A'|default_if_none:""}}</td>
+                    <td >{{q.to1|date:'g:i A'|default_if_none:""}}</td>
+                    <td style="{{q.ti2|if_late}}">{{q.ti2|date:'g:i A'|default_if_none:""}}</td>
+                    <td >{{q.to2|date:'g:i A'|default_if_none:""}}</td>
+                    <td style="{{q.ti3|if_late}}">{{q.ti3|date:'g:i A'|default_if_none:""}}</td>
+                    <td >{{q.to3|date:'g:i A'|default_if_none:""}}</td>
+                    <td style="{{q.ti4|if_late}}">{{q.ti4|date:'g:i A'|default_if_none:""}}</td>
+                    <td >{{q.to4|date:'g:i A'|default_if_none:""}}</td>
+                    <td style="{{q.ti5|if_late}}">{{q.ti5|date:'g:i A'|default_if_none:""}}</td>
+                    <td >{{q.to5|date:'g:i A'|default_if_none:""}}</td>
+                    <td style="{{q.ti6|if_late}}">{{q.ti6|date:'g:i A'|default_if_none:""}}</td>
+                    <td >{{q.to6|date:'g:i A'|default_if_none:""}}</td>
+                    <td style="{{q.ti7|if_late}}">{{q.ti7|date:'g:i A'|default_if_none:""}}</td>
+                    <td >{{q.to7|date:'g:i A'|default_if_none:""}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
